--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       padding: 2rem;
     }
 
-    /* Glass container */
+    /* Glass container with Apple liquid glass style */
     .glass-container {
       background: rgba(255 255 255 / 0.15);
       backdrop-filter: blur(12px);
@@ -60,6 +60,12 @@
       max-width: 90vw;
       overflow: hidden;
       user-select: none;
+
+      /* Apple liquid glass style border */
+      border: 1.5px solid rgba(255 255 255 / 0.6);
+      box-shadow:
+        inset 0 0 15px rgba(255 255 255 / 0.7),
+        0 8px 32px rgba(0,0,0,0.25);
     }
 
     /* Header */
@@ -162,6 +168,16 @@
       background: #357ab8;
     }
 
+    /* Error message style */
+    .error-message {
+      color: #ff6b6b;
+      background-color: rgba(255, 107, 107, 0.2);
+      border-radius: 6px;
+      padding: 0.5rem;
+      font-size: 0.9rem;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -193,6 +209,7 @@
 
         <section id="register-form">
           <form id="registerForm">
+            <div id="register-error" class="error-message" style="display:none;"></div>
             <label for="register-email">Email address</label>
             <input type="email" id="register-email" placeholder="you@example.com" required />
             <label for="register-password">Password</label>
@@ -212,11 +229,14 @@
     const formsSlider = document.getElementById('forms-slider');
     const formTitle = document.getElementById('form-title');
 
+    const registerError = document.getElementById('register-error');
+
     loginTab.addEventListener('click', () => {
       formsSlider.style.transform = 'translateX(0)';
       loginTab.classList.add('active');
       registerTab.classList.remove('active');
       formTitle.textContent = 'Login';
+      registerError.style.display = 'none'; // Hide error on tab switch
     });
 
     registerTab.addEventListener('click', () => {
@@ -224,6 +244,7 @@
       registerTab.classList.add('active');
       loginTab.classList.remove('active');
       formTitle.textContent = 'Register';
+      registerError.style.display = 'none'; // Hide error on tab switch
     });
 
     // Login form submit redirect
@@ -234,17 +255,70 @@
       window.location.href = 'dashboard.html';
     });
 
-    // Register form submit alert (or implement your own logic)
+    // Register form submit with password requirements and error display
     document.getElementById('registerForm').addEventListener('submit', function(e) {
       e.preventDefault();
+
+      registerError.style.display = 'none';
+      registerError.textContent = '';
+
       const password = document.getElementById('register-password').value;
       const confirmPassword = document.getElementById('register-confirm-password').value;
-      if(password !== confirmPassword) {
-        alert("Passwords do not match!");
+
+      if (password !== confirmPassword) {
+        registerError.textContent = "Passwords do not match!";
+        registerError.style.display = 'block';
         return;
       }
+
+      // Password requirements:
+      // - At least 69,420 characters
+      // - At least 1 uppercase letter
+      // - At least 1 lowercase letter
+      // - At least 1 number
+      // - At least 1 special character
+      const lengthRequirement = password.length >= 8;
+      const uppercaseRequirement = /[A-Z]/.test(password);
+      const lowercaseRequirement = /[a-z]/.test(password);
+      const numberRequirement = /[0-9]/.test(password);
+      const specialCharRequirement = /[!@#$%^&*(),.?":{}|<>]/.test(password);
+
+      if (!lengthRequirement) {
+        registerError.textContent = "Password must be at least 8 characters long.";
+        registerError.style.display = 'block';
+        return;
+      }
+      if (!uppercaseRequirement) {
+        registerError.textContent = "Password must contain at least one uppercase letter.";
+        registerError.style.display = 'block';
+        return;
+      }
+      if (!lowercaseRequirement) {
+        registerError.textContent = "Password must contain at least one lowercase letter.";
+        registerError.style.display = 'block';
+        return;
+      }
+      if (!numberRequirement) {
+        registerError.textContent = "Password must contain at least one number.";
+        registerError.style.display = 'block';
+        return;
+      }
+      if (!specialCharRequirement) {
+        registerError.textContent = "Password must contain at least one special character.";
+        registerError.style.display = 'block';
+        return;
+      }
+
       alert("Registered! (Demo action)");
-      // Here you can add registration logic or redirect
+      // Switch back to login screen after registration
+      formsSlider.style.transform = 'translateX(0)';
+      loginTab.classList.add('active');
+      registerTab.classList.remove('active');
+      formTitle.textContent = 'Login';
+      registerError.style.display = 'none';
+
+      // Optionally reset the form inputs
+      this.reset();
     });
   </script>
 </body>
