--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
 
       <div class="forms-slider" id="forms-slider">
         <section id="login-form">
+          <!-- Login error message container -->
+          <div id="login-error" class="error-message" style="display:none;"></div>
+
           <form id="loginForm">
             <label for="login-email">Email address</label>
             <input type="email" id="login-email" placeholder="you@example.com" required pattern=".+\.com" title="Email must end with .com" />
@@ -229,6 +232,7 @@
     const registerTab = document.getElementById('register-tab');
     const formsSlider = document.getElementById('forms-slider');
     const formTitle = document.getElementById('form-title');
+    const loginError = document.getElementById('login-error');
     const registerError = document.getElementById('register-error');
 
     loginTab.addEventListener('click', () => {
@@ -236,7 +240,8 @@
       loginTab.classList.add('active');
       registerTab.classList.remove('active');
       formTitle.textContent = 'Login';
-      registerError.style.display = 'none'; // Hide error on tab switch
+      loginError.style.display = 'none';
+      registerError.style.display = 'none';
     });
 
     registerTab.addEventListener('click', () => {
@@ -244,7 +249,8 @@
       registerTab.classList.add('active');
       loginTab.classList.remove('active');
       formTitle.textContent = 'Register';
-      registerError.style.display = 'none'; // Hide error on tab switch
+      loginError.style.display = 'none';
+      registerError.style.display = 'none';
     });
 
     // Allowed users for login
@@ -256,6 +262,8 @@
     // Login form submit
     document.getElementById('loginForm').addEventListener('submit', function(e) {
       e.preventDefault();
+      loginError.style.display = 'none';
+      loginError.textContent = '';
 
       const email = document.getElementById('login-email').value.trim();
       const password = document.getElementById('login-password').value;
@@ -264,16 +272,15 @@
       const isValid = allowedUsers.some(user => user.email.toLowerCase() === email.toLowerCase() && user.password === password);
 
       if (isValid) {
-        // Play sound
         const beep = new Audio('https://www.myinstants.com/media/sounds/flashbanggg.mp3');
         beep.play();
 
-        // Change page content
         document.body.style.background = "white";
         document.body.style.color = "black";
         document.body.innerHTML = "<h1>hi</h1>";
       } else {
-        alert("Invalid email or password.");
+        loginError.textContent = "Invalid email or password.";
+        loginError.style.display = "block";
       }
     });
 
@@ -294,11 +301,6 @@
       }
 
       // Password requirements:
-      // - At least 8 characters
-      // - At least 1 uppercase letter
-      // - At least 1 lowercase letter
-      // - At least 1 number
-      // - At least 1 special character
       const lengthRequirement = password.length >= 8;
       const uppercaseRequirement = /[A-Z]/.test(password);
       const lowercaseRequirement = /[a-z]/.test(password);
@@ -332,14 +334,12 @@
       }
 
       alert("Registered! (Demo action)");
-      // Switch back to login screen after registration
       formsSlider.style.transform = 'translateX(0)';
       loginTab.classList.add('active');
       registerTab.classList.remove('active');
       formTitle.textContent = 'Login';
       registerError.style.display = 'none';
 
-      // Optionally reset the form inputs
       this.reset();
     });
   </script>
