--- a/dashboard.html
+++ b/dashboard.html
@@ -2,10 +2,240 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dashboard</title>
+  <style>
+    :root {
+      --text-color: white;
+      --nav-bg: rgba(255 255 255 / 0.15);
+      --nav-border: rgba(255 255 255 / 0.6);
+      --nav-shadow-inset: rgba(255 255 255 / 0.7);
+      --nav-shadow: rgba(0,0,0,0.25);
+      --dashboard-bg: rgba(255 255 255 / 0.15);
+      --dashboard-border: rgba(255 255 255 / 0.6);
+      --dashboard-shadow-inset: rgba(255 255 255 / 0.7);
+      --dashboard-shadow: rgba(0,0,0,0.25);
+    }
+    .dark {
+      --text-color: #ddd;
+      --nav-bg: rgba(20 20 20 / 0.5);
+      --nav-border: rgba(100 100 100 / 0.7);
+      --nav-shadow-inset: rgba(255 255 255 / 0.1);
+      --nav-shadow: rgba(0,0,0,0.8);
+      --dashboard-bg: rgba(30 30 30 / 0.5);
+      --dashboard-border: rgba(100 100 100 / 0.7);
+      --dashboard-shadow-inset: rgba(255 255 255 / 0.1);
+      --dashboard-shadow: rgba(0,0,0,0.8);
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      transition: background-color 0.3s, color 0.3s;
+    }
+    body, html {
+      height: 100%;
+      background: url("https://wallpaperaccess.com/full/2092433.jpg") no-repeat center center fixed;
+      background-size: cover;
+      color: var(--text-color);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    nav {
+      width: 100%;
+      padding: 1rem 40px;
+      background: var(--nav-bg);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      border-radius: 20px 20px 12px 12px;
+      border: 1.5px solid var(--nav-border);
+      box-shadow:
+        inset 0 0 15px var(--nav-shadow-inset),
+        0 8px 32px var(--nav-shadow);
+      display: flex;
+      align-items: center;
+      margin-top: 20px;
+      color: var(--text-color);
+    }
+
+    .nav-inner {
+      display: flex;
+      gap: 2rem;
+      max-width: 1200px;
+      width: 100%;
+      font-weight: bold;
+      justify-content: center;
+      color: var(--text-color);
+    }
+
+    .nav-inner a {
+      color: var(--text-color);
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .nav-inner a:hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+
+    /* Container for nav links + toggle */
+    .nav-container {
+      display: flex;
+      align-items: center;
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+      gap: 2rem;
+    }
+
+    .nav-container > .nav-inner {
+      flex-grow: 1;
+      justify-content: flex-start;
+    }
+
+    .dark-mode-toggle {
+      margin-left: auto;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-weight: bold;
+      color: var(--text-color);
+      user-select: none;
+      cursor: pointer;
+      white-space: nowrap;
+    }
+
+    .dark-mode-toggle input[type="checkbox"] {
+      width: 40px;
+      height: 20px;
+      position: relative;
+      appearance: none;
+      background: #ccc;
+      outline: none;
+      border-radius: 20px;
+      transition: background 0.3s;
+      cursor: pointer;
+    }
+
+    .dark-mode-toggle input[type="checkbox"]:checked {
+      background: #4f8cff;
+    }
+
+    .dark-mode-toggle input[type="checkbox"]::before {
+      content: "";
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      background: white;
+      transition: 0.3s;
+    }
+
+    .dark-mode-toggle input[type="checkbox"]:checked::before {
+      transform: translateX(20px);
+    }
+
+    .content-wrapper {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 2rem;
+      width: 100%;
+    }
+
+    .dashboard-container {
+      background: var(--dashboard-bg);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      border-radius: 12px;
+      border: 1.5px solid var(--dashboard-border);
+      box-shadow:
+        inset 0 0 15px var(--dashboard-shadow-inset),
+        0 8px 32px var(--dashboard-shadow);
+      padding: 2rem;
+      text-align: center;
+      max-width: 500px;
+      width: 90%;
+    }
+
+    .dashboard-container h1 {
+      margin-bottom: 1rem;
+      text-shadow: 0 0 5px rgba(0,0,0,0.7);
+    }
+
+    .dashboard-container p {
+      font-size: 1.2rem;
+      text-shadow: 0 0 3px rgba(0,0,0,0.6);
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to your dashboard!</h1>
-  <p>This is a placeholder dashboard page.</p>
+  <nav>
+    <div class="nav-container">
+      <div class="nav-inner">
+        <a href="#">Home</a>
+        <a href="#">Profile</a>
+        <a href="#">Settings</a>
+      </div>
+
+      <label class="dark-mode-toggle" for="darkModeSwitch">
+        Dark Mode
+        <input type="checkbox" id="darkModeSwitch" />
+      </label>
+    </div>
+  </nav>
+
+  <div class="content-wrapper">
+    <div class="dashboard-container" id="welcome-box">
+      <h1>Welcome User</h1>
+      <p>You have successfully logged in. Enjoy your stay!</p>
+    </div>
+  </div>
+
+  <script>
+    // Get email from localStorage
+    const email = localStorage.getItem('loggedInEmail');
+    const welcomeBox = document.getElementById('welcome-box');
+
+    // Map emails to welcome names
+    const userNames = {
+      "kurt.tran.2005@gmail.com": "Kurt",
+      "russi9@mail.ru": "kv.bin",
+      "test@test.com": "Test User"
+    };
+
+    if (email) {
+      // Normalize email lowercase for lookup
+      const lowerEmail = email.toLowerCase();
+      const name = userNames[lowerEmail] || "User";
+      welcomeBox.querySelector('h1').textContent = `Welcome ${name}`;
+    }
+
+    // Dark mode toggle
+    const toggle = document.getElementById('darkModeSwitch');
+
+    if (localStorage.getItem('darkMode') === 'enabled') {
+      document.body.classList.add('dark');
+      toggle.checked = true;
+    }
+
+    toggle.addEventListener('change', () => {
+      if (toggle.checked) {
+        document.body.classList.add('dark');
+        localStorage.setItem('darkMode', 'enabled');
+      } else {
+        document.body.classList.remove('dark');
+        localStorage.setItem('darkMode', 'disabled');
+      }
+    });
+  </script>
 </body>
 </html>
