--- a/dashboard.html
+++ b/dashboard.html
@@ -196,7 +196,7 @@
   <div class="content-wrapper">
     <div class="dashboard-container" id="welcome-box">
       <h1>Welcome User</h1>
-      <p>You have successfully logged in. Enjoy your stay!</p>
+      <h6>dashboard is not finished :p</h6>
     </div>
   </div>
 
